k8s/hello-java-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello-java-svc
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: hello-java
  selector:
    app: hello-java
